# smart_parking_manage_system

./: SQLdata.md  buildSQL.md  test_reservation_logic.md  usingdocument.md  技术实现说明文档.md
smart_parking_backend/: .env  API_DOCUMENT.md  Front-end Logic.md  GENERATE_TEST_DATA_README.md  PAYMENT_PARKING_FIXES.md  PAYMENT_PARKING_TEST_REPORT.md  docker-compose.yml  generate_test_data.go  generate_test_data.sh  go.mod  go.sum  main.go  test_all_apis.py  test_all_apis.sh  test_payment_parking.sh  testdatai_nsert.md
smart_parking_backend/config/: config.yaml  payment_sandbox.yaml
smart_parking_backend/routers/: router.go
smart_parking_backend/utils/: code.go
smartparkingui/: .gitignore  BUILD_FIX.md  BUILD_FIX_HEADERS.md  CMakeLists.txt  DEMO_GUIDE.md  README.md  UI_DEMO_STEPS.md  bookingwindow.cpp  bookingwindow.h  bookingwindow.ui  build.bat  build.sh  create_demo_users.sh  historywindow.cpp  historywindow.h  historywindow.ui  loginwind.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  parkingadminpage.ui  paymentwindow.cpp  paymentwindow.h  paymentwindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui  reportpage.cpp  reportpage.h  reportpage.ui  resources.qrc  selectparkinglotdialog.cpp  selectparkinglotdialog.h  selectparkinglotdialog.ui  (+7 more)
smartparkingui/include/: apiclient.h  authmanager.h  messageboxhelper.h
smartparkingui/include/models/: parkingrecord.h  paymentrecord.h  reservationorder.h  user.h  vehicle.h  violationrecord.h
smartparkingui/include/utils/: jsonhelper.h
smartparkingui/resources/: resources.qrc
smartparkingui/src/: apiclient.cpp  apiclient_fixed.cpp  authmanager.cpp  main.cpp
smartparkingui/src/models/: parkingrecord.cpp  paymentrecord.cpp  reservationorder.cpp  user.cpp  vehicle.cpp  violationrecord.cpp
smartparkingui/src/utils/: jsonhelper.cpp
smartparkingui/ui/: AdminDataPage.qml  AdminMainPage.qml  BookingPage.qml  LoginPage.qml  OrderHistoryPage.qml  ParkingEntryPage.qml  ParkingVisualizationPage.qml  PaymentPage.qml  UserMainPage.qml  ViolationPage.qml  main.qml
(+24 files in other folders)
